--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -1,8 +1,23 @@
+body{
+    background: #ccc;
+}
+
 #title, .subtitle, .posttitle{
     color: blue;
+}
+
+.post img{
+    height: 550px;
+    width: 1300px;
 }
 
 .posttile{
     font-size: 16px;
     font-style: italic;
+}
+
+.post{
+    background: #fff;
+    padding: 10px;
+    border: 3px, solid, black;
 }
