--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -1,23 +1,69 @@
 body{
-    background: #ccc;
+    background: #c7c7c7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    max-width: 900px;
+    margin: auto;
 }
 
 #title, .subtitle, .posttitle{
-    color: blue;
+    color: #505050;
+}
+
+.header_sup{
+    padding-top: 10px;
+}
+
+.headerimg{
+    height: 70px;
+    width: 65px;
+    border: #505050 solid 3px;
+    border-radius: 100%;
+}
+
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a{
+    text-decoration: none;
+    color: #cf7171;
+    
 }
 
 .post img{
-    height: 550px;
-    width: 1300px;
+    height: 300px;
+    width: 100%;
 }
 
 .posttile{
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 .post{
     background: #fff;
-    padding: 10px;
-    border: 3px, solid, black;
+    padding: 15px;
+    border: 3px, solid,#505050;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-transform: capitalize;
+}
+
+.postcontent{
+    margin: 0;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+.postimage{
+    margin-bottom: 15px;
+}
+
+.contactlist{
+    list-style-type: none;
+    padding: 0;
+    padding-left: 15px;
 }
